Node: Correct version requirement